# german-learning

./: .gitignore  README.md  nouns_household.json  pyproject.toml  verbs.json
src/german_anki_deck/: __init__.py  __main__.py  cli.py  models.py  utils.py
