[project]
name = "german-anki-deck"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jaime Liew", email = "jaimeliew1@gmail.com" }
]
dependencies = [
    "pydantic>=2.7.3",
    "genanki>=0.13.1",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"german-anki-deck" = "german_anki_deck:main"
"german-numbers" = "german_anki_deck.cli:test_numbers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/german_anki_deck"]
